option optimize_for = LITE_RUNTIME;

package Encoder;

message E2SControl {
  optional bool req_forecast = 1;
}

message S2EControl {
	optional bool do_encode = 1;
  optional int32 forecast_byte = 2;
	repeated int32 lost_frames = 3;
}

message E2SData {
  optional int32 frame_size = 1;
	optional string frame_data = 2;
}

message ACK {
	optional int32 curr_frame = 1;
	optional int32 curr_bytes = 2;
	optional uint64 timestamp = 3;
}
